Fix layout, such as scroll bar, button spacings and header width

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,9 +15,18 @@
 
 .paper {
     border: 5px solid rgb(232, 232, 29);
-   //background-color: yellow;
+    background-color: yellow;
     border-radius: 40px;
     box-shadow: 0 0 20px 2px black;
     max-height: 75vh;
     max-width: 75vw;
+    
+}
+
+.scroll:not(:hover){
+    scrollbar-width: none;
+}
+
+.scroll::-webkit-scrollbar:not(:hover){
+    scrollbar-width: none;
 }
