--- a/src/app/components/all-tasks/all-tasks.component.scss
+++ b/src/app/components/all-tasks/all-tasks.component.scss
@@ -4,7 +4,7 @@ li {
     padding: 10px 20px;
     margin: 10px 0px;
     font-size: 10px;
-    //background-color: #f5ff37;
+    background-color: #f5ff37;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -27,7 +27,7 @@ li > p {
     border-radius: 50px;
     padding: 10px 20px;
     font-size: 20px;
-    //background-color: #f5ff37;
+    background-color: #f5ff37;
     display: flex;
     align-items: center;
     justify-content: space-between;
