--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -21,7 +21,7 @@ button {
     -webkit-user-select: none;
     touch-action: manipulation;
     box-shadow: -6px 8px 10px rgba(81,41,10,0.1),0px 2px 2px rgba(81,41,10,0.2);
-    width: 150px;
+    width: 100%;
   }
   
   button:active {
