--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,5 @@
 div{
     background-color: yellow;
+    width: 110%;
+    transform: translateX(-5%);
 }
