--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
             user-select: none;                       
 }
 
-//body {
-//    background-image: url(/assets/background.gif);
-//    background-size: cover;
-//}
+body {
+    background-image: url(/assets/background.gif);
+    background-size: cover;
+}
